--- a/SIte/style.css
+++ b/SIte/style.css
@@ -6,8 +6,9 @@
 }
 .v8_8 {
     /*Изображение сайта*/
+    
     width: 100%;
-    height: 1080px;
+    height: 100%;
     background: #000000;
     opacity: 1;
     position: absolute;
@@ -44,7 +45,7 @@
     left: 230px;
     font-family: 'Amatic SC', cursive;
     font-weight: Regular;
-    font-size: 34px;
+    font-size: 40px;
     opacity: 1;
     text-align: center;
   }
@@ -55,7 +56,7 @@
     color: rgba(255,255,255,1);
     position: relative;
     top: 520px;
-    left: 400px;
+    left: 330px;
     border-radius: 10px;
     box-shadow: 4px 4px 71px -6px rgba(100, 72, 91, 0.2);
     transition: all 1s ease;
